--- a/.github/workflows/mass-run-mop.yml
+++ b/.github/workflows/mass-run-mop.yml
@@ -4,7 +4,6 @@ name: Run Scripts on Multiple Repositories
 permissions:
   contents: write
 
-
 on:
   workflow_dispatch:
     inputs:
@@ -16,10 +15,6 @@ on:
         description: 'Title of the tab containing the links. Default is "links". The first column should contain the links to the repositories. a maximum of 256 links can be added.'
         required: false
         default: 'links-1'
-      results_worksheetTitle:
-        description: 'Title of the tab where results will be appended. Default is "results"'
-        required: false
-        default: 'results-1'
 
 jobs:
   fetch_data:
@@ -157,82 +152,100 @@ jobs:
           prerelease: true
           token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Read rows from results.csv
-      id: read_csv_rows
-      run: |
-        # Read the first 3 rows from results.csv
-        ROWS=$(head -n 3 ./projects/reports/$REPO_NAME/results.csv)
-        ROW1=$(echo "$ROWS" | sed -n '1p' | sed 's/"/'\''/g' | sed 's/,/","/g' | sed 's/^/"/' | sed 's/$/"/')
-        ROW2=$(echo "$ROWS" | sed -n '2p' | sed 's/"/'\''/g' | sed 's/,/","/g' | sed 's/^/"/' | sed 's/$/"/')
-        ROW3=$(echo "$ROWS" | sed -n '3p' | sed 's/"/'\''/g' | sed 's/,/","/g' | sed 's/^/"/' | sed 's/$/"/')
-        echo "::set-output name=row1::$ROW1"
-        echo "::set-output name=row2::$ROW2"
-        echo "::set-output name=row3::$ROW3"
+    # - name: Read rows from results.csv
+    #   id: read_csv_rows
+    #   run: |
+    #     # Read the first 3 rows from results.csv
+    #     ROWS=$(head -n 3 ./projects/reports/$REPO_NAME/results.csv)
+    #     ROW1=$(echo "$ROWS" | sed -n '1p' | sed 's/"/'\''/g' | sed 's/,/","/g' | sed 's/^/"/' | sed 's/$/"/')
+    #     ROW2=$(echo "$ROWS" | sed -n '2p' | sed 's/"/'\''/g' | sed 's/,/","/g' | sed 's/^/"/' | sed 's/$/"/')
+    #     ROW3=$(echo "$ROWS" | sed -n '3p' | sed 's/"/'\''/g' | sed 's/,/","/g' | sed 's/^/"/' | sed 's/$/"/')
+    #     echo "::set-output name=row1::$ROW1"
+    #     echo "::set-output name=row2::$ROW2"
+    #     echo "::set-output name=row3::$ROW3"
 
-    - name: Set up mutex
-      uses: ben-z/gh-action-mutex@v1.0.0-alpha.9
+    # - name: Set up mutex
+    #   uses: ben-z/gh-action-mutex@v1.0.0-alpha.9
 
-    - name: Append results to Google Sheet
-      uses: Wandalen/wretry.action@master
-      with:
-        attempt_delay: 60000 # 1 min
-        attempt_limit: 10
-        action: jroehl/gsheet.action@v2.0.0
-        with: |
-          spreadsheetId: ${{ github.event.inputs.google_sheet_id }}
-          commands: |
-            [
-              {
-                "command": "updateData",
-                "args": {
-                  "minCol": 1,
-                  "minRow": 1,
-                  "worksheetTitle": "${{ github.event.inputs.results_worksheetTitle }}",
-                  "data": [
-                    [${{ steps.read_csv_rows.outputs.row1 }}]
-                  ]
-                }
-              },
-              {
-                "command": "appendData",
-                "args": {
-                  "minCol": 1,
-                  "minRow": 2,
-                  "worksheetTitle": "${{ github.event.inputs.results_worksheetTitle }}",
-                  "data": [
-                    [${{ steps.read_csv_rows.outputs.row2 }}],
-                    [${{ steps.read_csv_rows.outputs.row3 }}]
-                  ]
-                }
-              }
-            ]
-      env:
-        GSHEET_CLIENT_EMAIL: ${{ secrets.GSHEET_CLIENT_EMAIL }}
-        GSHEET_PRIVATE_KEY: ${{ secrets.GSHEET_PRIVATE_KEY }}
+    # - name: Append results to Google Sheet
+    #   uses: Wandalen/wretry.action@master
+    #   with:
+    #     attempt_delay: 60000 # 1 min
+    #     attempt_limit: 10
+    #     action: jroehl/gsheet.action@v2.0.0
+    #     with: |
+    #       spreadsheetId: ${{ github.event.inputs.google_sheet_id }}
+    #       commands: |
+    #         [
+    #           {
+    #             "command": "updateData",
+    #             "args": {
+    #               "minCol": 1,
+    #               "minRow": 1,
+    #               "worksheetTitle": "${{ github.event.inputs.results_worksheetTitle }}",
+    #               "data": [
+    #                 [${{ steps.read_csv_rows.outputs.row1 }}]
+    #               ]
+    #             }
+    #           },
+    #           {
+    #             "command": "appendData",
+    #             "args": {
+    #               "minCol": 1,
+    #               "minRow": 2,
+    #               "worksheetTitle": "${{ github.event.inputs.results_worksheetTitle }}",
+    #               "data": [
+    #                 [${{ steps.read_csv_rows.outputs.row2 }}],
+    #                 [${{ steps.read_csv_rows.outputs.row3 }}]
+    #               ]
+    #             }
+    #           }
+    #         ]
+    #   env:
+    #     GSHEET_CLIENT_EMAIL: ${{ secrets.GSHEET_CLIENT_EMAIL }}
+    #     GSHEET_PRIVATE_KEY: ${{ secrets.GSHEET_PRIVATE_KEY }}
 
-    - name: Action failed for some reason
-      if: failure()
-      uses: Wandalen/wretry.action@master
-      with:
-        attempt_delay: 60000 # 1 min
-        attempt_limit: 10
-        action: jroehl/gsheet.action@v2.0.0
-        with: |
-          spreadsheetId: ${{ github.event.inputs.google_sheet_id }}
-          commands: |
-            [
-              {
-                "command": "appendData",
-                "args": {
-                  "minCol": 1,
-                  "minRow": 1,
-                  "worksheetTitle": "${{ github.event.inputs.results_worksheetTitle }}",
-                  "data": [
-                    ["${{ env.REPO_NAME }}", "Action failed for some reason"]
-                  ]
-                }
-              }
-            ]
-      env:
-        GSHEET_CLIENT_EMAIL: ${{ secrets.GSHEET_CLIENT_EMAIL }}
-        GSHEET_PRIVATE_KEY: ${{ secrets.GSHEET_PRIVATE_KEY }}
+    # - name: Action failed for some reason
+    #   if: failure()
+    #   uses: Wandalen/wretry.action@master
+    #   with:
+    #     attempt_delay: 60000 # 1 min
+    #     attempt_limit: 10
+    #     action: jroehl/gsheet.action@v2.0.0
+    #     with: |
+    #       spreadsheetId: ${{ github.event.inputs.google_sheet_id }}
+    #       commands: |
+    #         [
+    #           {
+    #             "command": "appendData",
+    #             "args": {
+    #               "minCol": 1,
+    #               "minRow": 1,
+    #               "worksheetTitle": "${{ github.event.inputs.results_worksheetTitle }}",
+    #               "data": [
+    #                 ["${{ env.REPO_NAME }}", "Action failed for some reason"]
+    #               ]
+    #             }
+    #           }
+    #         ]
+    #   env:
+    #     GSHEET_CLIENT_EMAIL: ${{ secrets.GSHEET_CLIENT_EMAIL }}
+    #     GSHEET_PRIVATE_KEY: ${{ secrets.GSHEET_PRIVATE_KEY }}
+
+  analyze_data:
+    needs: run_jobs
+    runs-on: ubuntu-latest
+    steps:
+      - name: download files from release
+        uses: robinraju/release-downloader@v1.10
+        with:
+          preRelease: true
+          tag: mass-run-mop-${{ github.run_id }}
+          fileName: '*.zip'
+          out-file-path: 'downloads'
+          extract: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: list download
+        run: |
+          ls -l downloads
