--- a/.github/workflows/mass-run-mop.yml
+++ b/.github/workflows/mass-run-mop.yml
@@ -106,30 +106,11 @@ jobs:
         chmod +x ./run-mop-new.sh
         ./run-mop-new.sh ./$REPO_NAME
 
-    - name: Generate report csv
-      run: |
         # extract all .gz files
-        cd ./projects/reports/$REPO_NAME
+        cd ./reports/$REPO_NAME
         find . -type f -name "*.gz" -exec gunzip {} \;
         echo "Files within ./projects/reports/$REPO_NAME:"
         ls -l
-
-        # move ../../../scripts/parse-reports.py to ./projects/reports
-        cd ../
-        cp ../../scripts/parse-reports.py .
-        
-        ls -l
-        # run the python script
-        python3 parse-reports.py
-        ls -l
-
-        # print the contents of results.csv
-        echo "================================== Results =================================="
-        cat results.csv
-
-        cp results.csv ./$REPO_NAME/
-      shell: bash
-      continue-on-error: true
 
     - name: Zip report files
       run: |
@@ -146,8 +127,8 @@ jobs:
         action: softprops/action-gh-release@v1
         with: |
           files: ./projects/${{env.ZIP_FILE}}
-          tag_name: mass-run-mop-${{ github.run_id }}
-          name: mass-run-mop-${{ github.run_id }}
+          tag_name: mass-run-mop-${{inputs.links_worksheetTitle}}-${{ github.run_id }}
+          name: mass-run-mop-${{inputs.links_worksheetTitle}}-${{ github.run_id }}
           draft: false
           prerelease: true
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -240,12 +221,47 @@ jobs:
         uses: robinraju/release-downloader@v1.10
         with:
           preRelease: true
-          tag: mass-run-mop-${{ github.run_id }}
+          tag: mass-run-mop-${{inputs.links_worksheetTitle}}-${{ github.run_id }}
           fileName: '*.zip'
-          out-file-path: 'downloads'
-          extract: true
+          out-file-path: './projects/reports/'
+          extract: false
           token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: list download
+      
+      - name: extract zip files into folders with the same name
         run: |
-          ls -l downloads
+          cd ./projects/reports
+          for f in *.zip; do unzip -d "${f%.*}" "$f"; done
+          ls -l
+
+      - name: Generate report csv
+        run: |
+          cd ./projects/reports
+
+          # move ../../../scripts/parse-reports.py to ./projects/reports
+          cp ../../scripts/parse-reports.py .
+          
+          ls -l
+          # run the python script
+          python3 parse-reports.py
+          ls -l
+  
+          # print the contents of results.csv
+          echo "================================== Results =================================="
+          cat results.csv
+
+        shell: bash
+        continue-on-error: true
+
+      - name: Upload report to GitHub Release
+        uses: Wandalen/wretry.action@master
+        with:
+          attempt_delay: 60000 # 1 min
+          attempt_limit: 10
+          action: softprops/action-gh-release@v1
+          with: |
+            files: ./projects/reports/results.csv
+            tag_name: mass-run-mop-${{inputs.links_worksheetTitle}}-${{ github.run_id }}
+            name: mass-run-mop-${{inputs.links_worksheetTitle}}-${{ github.run_id }}
+            draft: false
+            prerelease: true
+            token: ${{ secrets.GITHUB_TOKEN }}
