--- a/.github/workflows/mass-run-mop.yml
+++ b/.github/workflows/mass-run-mop.yml
@@ -133,88 +133,9 @@ jobs:
           prerelease: true
           token: ${{ secrets.GITHUB_TOKEN }}
 
-    # - name: Read rows from results.csv
-    #   id: read_csv_rows
-    #   run: |
-    #     # Read the first 3 rows from results.csv
-    #     ROWS=$(head -n 3 ./projects/reports/$REPO_NAME/results.csv)
-    #     ROW1=$(echo "$ROWS" | sed -n '1p' | sed 's/"/'\''/g' | sed 's/,/","/g' | sed 's/^/"/' | sed 's/$/"/')
-    #     ROW2=$(echo "$ROWS" | sed -n '2p' | sed 's/"/'\''/g' | sed 's/,/","/g' | sed 's/^/"/' | sed 's/$/"/')
-    #     ROW3=$(echo "$ROWS" | sed -n '3p' | sed 's/"/'\''/g' | sed 's/,/","/g' | sed 's/^/"/' | sed 's/$/"/')
-    #     echo "::set-output name=row1::$ROW1"
-    #     echo "::set-output name=row2::$ROW2"
-    #     echo "::set-output name=row3::$ROW3"
-
-    # - name: Set up mutex
-    #   uses: ben-z/gh-action-mutex@v1.0.0-alpha.9
-
-    # - name: Append results to Google Sheet
-    #   uses: Wandalen/wretry.action@master
-    #   with:
-    #     attempt_delay: 60000 # 1 min
-    #     attempt_limit: 10
-    #     action: jroehl/gsheet.action@v2.0.0
-    #     with: |
-    #       spreadsheetId: ${{ github.event.inputs.google_sheet_id }}
-    #       commands: |
-    #         [
-    #           {
-    #             "command": "updateData",
-    #             "args": {
-    #               "minCol": 1,
-    #               "minRow": 1,
-    #               "worksheetTitle": "${{ github.event.inputs.results_worksheetTitle }}",
-    #               "data": [
-    #                 [${{ steps.read_csv_rows.outputs.row1 }}]
-    #               ]
-    #             }
-    #           },
-    #           {
-    #             "command": "appendData",
-    #             "args": {
-    #               "minCol": 1,
-    #               "minRow": 2,
-    #               "worksheetTitle": "${{ github.event.inputs.results_worksheetTitle }}",
-    #               "data": [
-    #                 [${{ steps.read_csv_rows.outputs.row2 }}],
-    #                 [${{ steps.read_csv_rows.outputs.row3 }}]
-    #               ]
-    #             }
-    #           }
-    #         ]
-    #   env:
-    #     GSHEET_CLIENT_EMAIL: ${{ secrets.GSHEET_CLIENT_EMAIL }}
-    #     GSHEET_PRIVATE_KEY: ${{ secrets.GSHEET_PRIVATE_KEY }}
-
-    # - name: Action failed for some reason
-    #   if: failure()
-    #   uses: Wandalen/wretry.action@master
-    #   with:
-    #     attempt_delay: 60000 # 1 min
-    #     attempt_limit: 10
-    #     action: jroehl/gsheet.action@v2.0.0
-    #     with: |
-    #       spreadsheetId: ${{ github.event.inputs.google_sheet_id }}
-    #       commands: |
-    #         [
-    #           {
-    #             "command": "appendData",
-    #             "args": {
-    #               "minCol": 1,
-    #               "minRow": 1,
-    #               "worksheetTitle": "${{ github.event.inputs.results_worksheetTitle }}",
-    #               "data": [
-    #                 ["${{ env.REPO_NAME }}", "Action failed for some reason"]
-    #               ]
-    #             }
-    #           }
-    #         ]
-    #   env:
-    #     GSHEET_CLIENT_EMAIL: ${{ secrets.GSHEET_CLIENT_EMAIL }}
-    #     GSHEET_PRIVATE_KEY: ${{ secrets.GSHEET_PRIVATE_KEY }}
-
   analyze_data:
     needs: run_jobs
+    if: always()
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
