Update Dockerfile to use latest pynguin

--- a/scripts_pynguin/Dockerfile
+++ b/scripts_pynguin/Dockerfile
@@ -4,8 +4,7 @@ FROM python:3.10.14-slim-bullseye
 RUN apt-get update && \
     apt-get install -y git zip && \
     pip install --upgrade pip setuptools wheel && \
-    pip install pytest && \
-    pip install git+https://github.com/se2p/pynguin.git@0.39.0
+    pip install pytest pynguin
 
 # Environment variables
 ENV PYNGUIN_DANGER_AWARE=true
