--- a/.github/workflows/run-single-generated-tests.yml
+++ b/.github/workflows/run-single-generated-tests.yml
@@ -32,6 +32,13 @@ jobs:
               # Extract the SHA from the input by removing any part before a semicolon
               SHA=$(echo "${{ inputs.project-link }}" | sed 's/.*;//')
 
+              REPO_NAME="${REPO_URL##*/}"  # This strips everything before the last '/' character
+              OWNER_NAME="${REPO_URL%/$REPO_NAME}"  # Removes the repo name from the URL, leaving the owner path
+              OWNER_NAME="${OWNER_NAME##*/}"  # Extracts only the owner name
+              FULL_REPO_NAME="$OWNER_NAME-$REPO_NAME"  # Combines owner and repository names with a dash
+              ZIP_FILE="${FULL_REPO_NAME}.zip"
+
+              echo "ZIP_FILE=$ZIP_FILE" >> $GITHUB_ENV
               echo "REPO_URL=$REPO_URL" >> $GITHUB_ENV
               echo "SHA=$SHA" >> $GITHUB_ENV
           shell: bash
