--- a/.github/workflows/mass-run-mop.yml
+++ b/.github/workflows/mass-run-mop.yml
@@ -25,6 +25,10 @@ on:
         options:
           - github
           - docker
+      pymop-branch:
+        description: 'Branch of the pymop repository to use.'
+        default: 'add_statistics_new'
+        required: true
   repository_dispatch:
     types: [run-multiple-repos]
 
@@ -61,6 +65,7 @@ jobs:
     with:
       project-link: ${{ matrix.repo-link }}
       release-name: ${{ github.event.inputs.release_name || github.event.client_payload.release_name }}
+      pymop-branch: ${{ github.event.inputs.pymop_branch || github.event.client_payload.pymop_branch }}
     secrets:
       GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
     strategy:
@@ -75,6 +80,7 @@ jobs:
     with:
       project-link: ${{ matrix.repo-link }}
       release-name: ${{ github.event.inputs.release_name || github.event.client_payload.release_name }}
+      pymop-branch: ${{ github.event.inputs.pymop_branch || github.event.client_payload.pymop_branch }}
     secrets:
       GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
     strategy:
