--- a/.github/workflows/mass-run-mop.yml
+++ b/.github/workflows/mass-run-mop.yml
@@ -65,7 +65,7 @@ jobs:
     with:
       project-link: ${{ matrix.repo-link }}
       release-name: ${{ github.event.inputs.release_name || github.event.client_payload.release_name }}
-      pymop-branch: ${{ github.event.inputs.pymop_branch || github.event.client_payload.pymop_branch }}
+      pymop-branch: ${{ github.event.inputs.pymop-branch || github.event.client_payload.pymop-branch }}
     secrets:
       GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
     strategy:
@@ -80,7 +80,6 @@ jobs:
     with:
       project-link: ${{ matrix.repo-link }}
       release-name: ${{ github.event.inputs.release_name || github.event.client_payload.release_name }}
-      pymop-branch: ${{ github.event.inputs.pymop_branch || github.event.client_payload.pymop_branch }}
     secrets:
       GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
     strategy:
