ci: fix repo scraping script and distribute load

--- a/.github/workflows/find-repos-using-spec-regex.yml
+++ b/.github/workflows/find-repos-using-spec-regex.yml
@@ -19,15 +19,32 @@ on:
       end_spec:
         description: the spec to end collecting data at
         type: number
-        default: -1
+        default: 137
 
 jobs:
+  distribute-load:
+    runs-on: ubuntu-latest
+    outputs:
+      ranges: ${{ steps.distribute-load.outputs.ranges }}
+    steps:
+      - id: distribute-load
+        name: Distribute Load
+        run: |
+          RANGES=$(python3 -c "print([{'start': i, 'end': min(i + 10, ${{inputs.end_spec}})} for i in range(${{inputs.start_spec}}, ${{inputs.end_spec}}, 10)])")
+          echo "RANGES: $RANGES"
+          echo "ranges=${RANGES}" >> $GITHUB_OUTPUT
   crawl:
     permissions: 
       pull-requests: write
       contents: write
 
+    needs: distribute-load
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        range: ${{ fromJson(needs.distribute-load.outputs.ranges) }}
+      fail-fast: false
+      max-parallel: 1
     steps:
       - uses: actions/checkout@v4
         with:
@@ -42,13 +59,15 @@ jobs:
         run: yarn install
 
       - name: Find Repos
-        run: yarn start gh spec_id_basec_collect -t ${{inputs.testFramework}} -s ${{inputs.start_page}} -e ${{inputs.end_page}} -c ${{inputs.start_spec}} -d ${{inputs.end_spec}}
+        run: yarn start gh spec_id_basec_collect -t ${{inputs.testFramework}} -s ${{inputs.start_page}} -e ${{inputs.end_page}} -c ${{matrix.range.start}} -d ${{matrix.range.end}}
+        timeout-minutes: 295
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
+        if: always()
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           base: main
