--- a/.github/workflows/find-repos.yml
+++ b/.github/workflows/find-repos.yml
@@ -1,12 +1,12 @@
 name: Find Repos
 
+permissions: 
+  pull-requests: write
+  contents: write
+
 on:
   workflow_dispatch:
     inputs:
-      dependencyNames:
-        description: space delimited list of libraries to find dependant repos on
-        type: string
-        required: true
       testFramework:
         description: space delimited list of testing frameworks to find in manifest files (the list is ORed)
         default: 'pytest unit'
@@ -16,14 +16,46 @@ on:
       end_page:
         description: the page to end collecting data at
         type: number
+      start_dependency:
+        description: the dependency to start collecting data from
+        type: number
+        default: 0
+      end_dependency:
+        description: the dependency to end collecting data at
+        type: number
+        default: -1
 
 jobs:
+  distribute-load:
+    runs-on: ubuntu-latest
+    outputs:
+      ranges: ${{ steps.distribute-load.outputs.ranges }}
+      release-tag: ${{ steps.release-tag.outputs.release-tag }}
+    steps:
+      - id: distribute-load
+        name: Distribute Load
+        run: |
+          RANGES=$(python3 -c "print([{'start': i, 'end': min(i + 5, ${{inputs.end_dependency}})} for i in range(${{inputs.start_dependency}}, ${{inputs.end_dependency}}, 5)])")
+          echo "RANGES: $RANGES"
+          echo "ranges=${RANGES}" >> $GITHUB_OUTPUT
+      
+      - id: release-tag
+        name: Determine Release Tag
+        run: |
+          echo "release-tag=gh-dependency-based-repo-data-$(date +%m-%d-%Y_%H-%M-%S)" >> $GITHUB_OUTPUT
+
   crawl:
     permissions: 
       pull-requests: write
       contents: write
 
+    needs: distribute-load
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        range: ${{ fromJson(needs.distribute-load.outputs.ranges) }}
+      fail-fast: false
+      max-parallel: 1
     steps:
       - uses: actions/checkout@v4
         with:
@@ -38,17 +70,23 @@ jobs:
         run: yarn install
 
       - name: Find Repos
-        run: yarn start gh collect -l ${{inputs.dependencyNames}} -t ${{inputs.testFramework}} -s ${{inputs.start_page}} -e ${{inputs.end_page}}
+        timeout-minutes: 295
+        run: yarn start gh collect -o ./collected-data -t ${{inputs.testFramework}} -s ${{inputs.start_page}} -e ${{inputs.end_page}} -c ${{matrix.range.start}} -d ${{matrix.range.end}}
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
 
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v6
+      - name: Upload report to GitHub Release
+        uses: Wandalen/wretry.action@master
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          base: main
-          commit-message: "data: add found repos"
-          branch: gh-repo-data-${{github.run_id}}
-          title: "data: add found GitHub repos"
-          body: "This PR adds more GitHub repo data."
+          attempt_delay: 60000 # 1 min
+          attempt_limit: 10
+          action: softprops/action-gh-release@v1
+          with: |
+            files: |
+              ./collected-data/*
+            tag_name: ${{needs.distribute-load.outputs.release-tag}}
+            name: ${{needs.distribute-load.outputs.release-tag}}
+            draft: false
+            prerelease: true
+            token: ${{ secrets.GITHUB_TOKEN }}
