--- a/.github/workflows/run-single-project.yml
+++ b/.github/workflows/run-single-project.yml
@@ -53,6 +53,7 @@ jobs:
         - name: Set up Python
           uses: actions/setup-python@v2
           with:
+            token: ${{ secrets.GITHUB_TOKEN }}
             python-version: '3.12.8'
 
         - name: Setup variables
@@ -152,6 +153,7 @@ jobs:
         - name: Set up Python
           uses: actions/setup-python@v2
           with:
+            token: ${{ secrets.GITHUB_TOKEN }}
             python-version: '3.12.8'
 
         - name: Setup variables
