--- a/.github/workflows/mass-run-mop.yml
+++ b/.github/workflows/mass-run-mop.yml
@@ -49,6 +49,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           python-version: '3.10'
 
       - name: Install Dependencies
