--- a/.github/workflows/run-single-pymop-dynapyt-dylin-comparison.yml
+++ b/.github/workflows/run-single-pymop-dynapyt-dylin-comparison.yml
@@ -45,7 +45,7 @@ jobs:
             cd ./DyLin_DynaPyt_Experiment
             ls -l
             chmod +x ./run_experiment.sh
-            ./run_experiment.sh "${{ inputs.project-link }}"
+            ./run_experiment.sh "${{ inputs.project-link }}" 1
           env:
             GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
 
