--- a/.github/workflows/analyze_data.yml
+++ b/.github/workflows/analyze_data.yml
@@ -50,13 +50,17 @@ jobs:
                     DECODED_NAME=$(printf "%b" "${ASSET_NAME//%/\\x}")
                     curl -L -o "./projects/reports/$DECODED_NAME" -H "Authorization: token $GITHUB_TOKEN" "$url"
 
-                    cd ./projects/reports
+                    if [[ "$DECODED_NAME" == *.zip ]]; then
+                      cd ./projects/reports
 
-                    folder_name=$(echo "${DECODED_NAME%.*}" | sed -E 's/(_ORIGINAL|_A|_B|_C\+?|_D)$//')
-                    unzip -o -d "$folder_name" "$DECODED_NAME"
-                    rm "$DECODED_NAME"
+                      folder_name=$(echo "${DECODED_NAME%.*}" | sed -E 's/(_ORIGINAL|_A|_B|_C\+?|_D)$//')
+                      unzip -o -d "$folder_name" "$DECODED_NAME"
+                      rm "$DECODED_NAME"
 
-                    cd ../..
+                      cd ../..
+                    else
+                      echo "Skipping non-zip file: $DECODED_NAME"
+                    fi
                   done
                 else
                   echo "No assets found or error in release data for $repo."
