--- a/.github/workflows/run-single-pynguin.yml
+++ b/.github/workflows/run-single-pynguin.yml
@@ -20,6 +20,12 @@ jobs:
           with:
             fetch-depth: 0
 
+        - name: Set up Python
+          uses: actions/setup-python@v2
+          with:
+            token: ${{ secrets.GITHUB_TOKEN }}
+            python-version: '3.10'
+
         - name: Setup variables
           run: |
               REPO_URL=$(echo "${{ inputs.project-link }}" | sed 's/;.*//')
